--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 
   <script>
     const foodData = [
-      { name: "Quarter Pounder", restaurant: "McDonalds", weight: 4, image: "https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/McDonald%27s-Quarter-Pounder_with_Cheese.jpg/320px-McDonald%27s-Quarter-Pounder_with_Cheese.jpg" },
-      { name: "Big Mac", restaurant: "McDonalds", weight: 3.2, image: "https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Big_Mac_hamburger.jpg/320px-Big_Mac_hamburger.jpg" },
-      { name: "McChicken", restaurant: "McDonalds", weight: 5.04, image: "https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/McChicken.jpg/320px-McChicken.jpg" },
-      { name: "Whopper", restaurant: "Burger King", weight: 3.879, image: "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Burger_King_Whopper.jpg/320px-Burger_King_Whopper.jpg" },
-      { name: "Impossible Whopper", restaurant: "Burger King", weight: 3.99, image: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Burger_King_Impossible_Whopper.jpg/320px-Burger_King_Impossible_Whopper.jpg" }
+      { name: "Quarter Pounder", restaurant: "McDonalds", weight: 4, image: "https://i.imgur.com/Zw8db3h.jpg" },
+      { name: "Big Mac", restaurant: "McDonalds", weight: 3.2, image: "https://i.imgur.com/Kf6KzLE.jpg" },
+      { name: "McChicken", restaurant: "McDonalds", weight: 5.04, image: "https://i.imgur.com/3AvF6Uu.jpg" },
+      { name: "Whopper", restaurant: "Burger King", weight: 3.879, image: "https://i.imgur.com/Nv4xCuj.jpg" },
+      { name: "Impossible Whopper", restaurant: "Burger King", weight: 3.99, image: "https://i.imgur.com/tWjz84I.jpg" }
     ];
 
     function getCarbonFP(name, weight) {
