--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 
   <script>
     const foodData = [
-      { name: "Quarter Pounder", restaurant: "McDonalds", weight: 4, image: "https://i.imgur.com/Zw8db3h.jpg" },
-      { name: "Big Mac", restaurant: "McDonalds", weight: 3.2, image: "https://i.imgur.com/Kf6KzLE.jpg" },
-      { name: "McChicken", restaurant: "McDonalds", weight: 5.04, image: "https://i.imgur.com/3AvF6Uu.jpg" },
-      { name: "Whopper", restaurant: "Burger King", weight: 3.879, image: "https://i.imgur.com/Nv4xCuj.jpg" },
-      { name: "Impossible Whopper", restaurant: "Burger King", weight: 3.99, image: "https://i.imgur.com/tWjz84I.jpg" }
+      { name: "Quarter Pounder", restaurant: "McDonalds", weight: 4, image: "quarter pounder.png" },
+      { name: "Big Mac", restaurant: "McDonalds", weight: 3.2, image: "big mac.png" },
+      { name: "McChicken", restaurant: "McDonalds", weight: 5.04, image: "mcchicken.png" },
+      { name: "Whopper", restaurant: "Burger King", weight: 3.879, image: "whopper.png" },
+      { name: "Impossible Whopper", restaurant: "Burger King", weight: 3.99, image: "impossible whopper" }
     ];
 
     function getCarbonFP(name, weight) {
