--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <script>
     const foodData = [
       { name: "Quarter Pounder", restaurant: "McDonalds", weight: 4, image: "quarter pounder.png" },
-      { name: "Big Mac", restaurant: "McDonalds", weight: 3.2, image: "big mac.png" },
+      { name: "Big Mac", restaurant: "McDonalds", weight: 3.2, image: "https://github.com/gabriela-148/fast-foodprints-web/blob/main/big%20mac.png" },
       { name: "McChicken", restaurant: "McDonalds", weight: 5.04, image: "mcchicken.png" },
       { name: "Whopper", restaurant: "Burger King", weight: 3.879, image: "whopper.png" },
       { name: "Impossible Whopper", restaurant: "Burger King", weight: 3.99, image: "impossible whopper" }
