--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       { name: "Big Mac", restaurant: "McDonalds", weight: 3.2, image: "https://github.com/gabriela-148/fast-foodprints-web/blob/main/big%20mac.png" },
       { name: "McChicken", restaurant: "McDonalds", weight: 5.04, image: "mcchicken.png" },
       { name: "Whopper", restaurant: "Burger King", weight: 3.879, image: "whopper.png" },
-      { name: "Impossible Whopper", restaurant: "Burger King", weight: 3.99, image: "impossible whopper" }
+      { name: "Impossible Whopper", restaurant: "Burger King", weight: 3.99, image: "impossible whopper.png" }
     ];
 
     function getCarbonFP(name, weight) {
